temp disabled exterior

--- a/src/layouts/MobileLayout.astro
+++ b/src/layouts/MobileLayout.astro
@@ -5,9 +5,9 @@ import Face4Mobile from '../components/mobile/Face4Mobile.astro'
 
 <main class="mobile-konbini">
   <div class="mobile-konbini__inner">
-    <section class="mobile-konbini__section mobile-konbini__section--exterior">
+    <!-- <section class="mobile-konbini__section mobile-konbini__section--exterior">
       <StoreExteriorMobile />
-    </section>
+    </section> -->
 
     <section class="mobile-konbini__section mobile-konbini__section--face4">
       <Face4Mobile />
