--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@ import MobileLayout from '../layouts/MobileLayout.astro'
   <MainLayout />
 </div>
 
-<!-- <div class="site site--mobile">
+<div class="site site--mobile">
   <MobileLayout />
-</div> -->
+</div>
 
 <style>
   :root {
