--- a/src/pages/printablePortfolio.astro
+++ b/src/pages/printablePortfolio.astro
@@ -3,6 +3,11 @@
 import NavBar from '../components/NavBar.astro'
 ---
 
+  <head>
+    <link rel="stylesheet" href="/styles/global.css" />
+    <title>Neon's Printable Portfolio</title>
+  </head>
+
 <NavBar current="printable" />
 <main class="portfolio-print">
 
