--- a/src/components/screens/Face3.astro
+++ b/src/components/screens/Face3.astro
@@ -2,11 +2,11 @@
   <div class="parallax-scene-3">
     <div class="scene-canvas" id="parallax-scene">
       <!-- very back background -->
-      <img
+      <!-- <img
         src="/assets/face3/background.png"
         alt="Store background"
         class="layer layer-bg"
-      />
+      /> -->
 
       <!-- shelf art in front of background image -->
       <img
