--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,6 @@ import MobileLayout from '../layouts/MobileLayout.astro'
     ></script>
     <title>Neon's Konbini</title>
   </head>
-
   <body>
     <div class="site site--desktop">
       <MainLayout />
@@ -34,14 +33,15 @@ import MobileLayout from '../layouts/MobileLayout.astro'
     --mobile-breakpoint: 768px;
   }
 
+  html,
   body {
     margin: 0;
+    padding: 0;
+    min-height: 100%;
   }
 
   .site {
-    /* important: let each layout control its own scrolling */
     width: 100%;
-    height: 100%;
   }
 
   .site--mobile {
