added face3mobile still need to fix it though

--- a/src/layouts/MobileLayout.astro
+++ b/src/layouts/MobileLayout.astro
@@ -1,6 +1,7 @@
 ---
 import StoreExteriorMobile from '../components/mobile/StoreExteriorMobile.astro'
 import Face4Mobile from '../components/mobile/Face4Mobile.astro'
+import Face3Mobile from '../components/mobile/Face3Mobile.astro'
 ---
 
 
@@ -13,6 +14,10 @@ import Face4Mobile from '../components/mobile/Face4Mobile.astro'
 
     <section class="mobile-konbini__section mobile-konbini__section--face4">
       <Face4Mobile />
+    </section>
+
+    <section class="mobile-konbini__section mobile-konbini__section--face3">
+      <Face3Mobile />
     </section>
   </div>
 </main>
